--- a/main.css
+++ b/main.css
@@ -81,26 +81,6 @@
   visibility: hidden;
 }
 
-.fade-in {
-  @mixin fade-in;
-}
-
-.fade-out {
-  @mixin fade-out;
-}
-
-.text-center {
-  text-align: center;
-}
-
-.section {
-  margin-top: 40px;
-
-  &:first-child {
-    margin-top: 0;
-  }
-}
-
 .section--with-bg {
   padding: 40px 0;
 }
@@ -145,6 +125,10 @@ select {
   @mixin p;
 }
 
+figure {
+  margin: 0
+}
+
 .h2 {
   font-size: 1.4rem;
   line-height: 1.35;
@@ -170,27 +154,6 @@ select {
   }
 }
 
-.welcome__button {
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  background: none;
-  border: 0;
-  transform: translate3d(-50%, 10px, 0);
-  cursor: pointer;
-
-  svg {
-    width: 20px;
-    height: 20px;
-    fill: var(--white);
-    transition: opacity 0.3s;
-
-    &:hover {
-      opacity: 0.7;
-    }
-  }
-}
-
 .wrapper {
   display: flex;
   flex-direction: column;
@@ -204,6 +167,14 @@ select {
   padding: 1.5rem;
 }
 
+.review {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  /* width: min(380px, 100%); */
+  max-width: 380px;
+}
+
 .review__header {
   position: relative;
   padding: 0 1rem;
@@ -211,7 +182,7 @@ select {
 
 .review__header-btn {
   position: absolute;
-  right: 60px;
+  right: 75px;
   bottom: 30px;
   border: none;
   outline: none;
@@ -232,6 +203,7 @@ select {
   font-size: 36px;
   font-weight: 600;
   margin: 0;
+  color: rgb(0, 78, 55)
 }
 
 .review__descript {
@@ -252,8 +224,9 @@ select {
 }
 
 .review__title {
-    font-size: 16px;
-    font-weight: 500;
+    font-size: 18px;
+    font-weight: 600;
+    color: rgb(0, 78, 55);
 }
 
 .review__icon {
@@ -270,7 +243,7 @@ select {
 }
 
 .review__product-image {
-    border-right: 0.75px solid var(--green);
+    border-right: 0.75px solid green;
     height: 80px;
     width: 40px;
     padding: 0 30px 0 15px;
@@ -315,4 +288,20 @@ select {
     margin-left: 6px;
 }
 
+@media screen and (min-width: 768px) {
+  .reviews {
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 1fr;
+  }
+
+  .review__content {
+    flex: 1 0 auto;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .reviews {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
 
